tests/compile_fail/defined_orphan_int.out
In file included from tests/compile_fail/defined_orphan_int.cpp:17:
src/secureenumconverter.inc:16:6: error: #error "SEC_ORPHAN_INT defined before including secureenumconverter.inc"
     #error "SEC_ORPHAN_INT defined before including secureenumconverter.inc"
      ^~~~~
compilation terminated due to -Wfatal-errors.
